--- a/about-us-v2.html
+++ b/about-us-v2.html
@@ -1,21 +1,14 @@
-<!DOCTYPE HTML>
-<!--
-	Hyperspace by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Hyperspace by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta content="width=device-width, initial-scale=1.0" name="viewport">
-		<meta content="" name="description">
-  	<meta content="" name="keywords">
-		
-	<!-- Template Main CSS File -->
-	<link rel="stylesheet" href="assets-2/css/main.css" />
-	<link rel="stylesheet" href="assets/css/style.css"/>
-  
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Mentor Bootstrap Template - Index</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -29,7 +22,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Libre+Bodoni:wght@500&family=Titan+One&display=swap" rel="stylesheet">
-  
+
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
   <link href="assets/fontawesome/css/all.css" rel="stylesheet">
@@ -39,17 +32,26 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-		
-	</head>
-	<body>
-  
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets-2/css/main.css" />
+
+  <!-- =======================================================
+  * Template Name: Mentor - v4.7.0
+  * Template URL: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+  </head>
+
+<body>
+
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
       <h1 class="logo me-auto"><a href="index.html">Consciouswithlife</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
@@ -66,40 +68,6 @@
     </div>
   </header><!-- End Header -->
 
-  <!--<header id="header" class="fixed-top">
-    <div class="container d-flex align-items-center">
-
-      <h1 class="logo me-auto"><a href="index.html">Consciouswithlife</a></h1>
-
-
-      <nav id="navbar" class="navbar order-last order-lg-0" style="list-style: none;">
-
-          <li><a href="index.html" style="text-decoration:none">Home</a></li>
-          <li><a class="active"  href="about-us-v2.html" style="text-decoration:none">About Us</a></li>
-          <li><a href="courses.html" style="text-decoration:none">Courses</a></li>-->
-          <!--<li><a href="2022SummerCamp.html" style="text-decoration:none">2022 Summer Camp</a></li>-->
-        <!--</ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav>--><!-- .navbar -->
-
-      <!--<a href="courses.html" class="get-started-btn">Get Started</a>-->
-
-    <!--</div>
-  </header>--><!-- End Header -->
-
-		<!-- Sidebar -->
-			<!--<section id="sidebar">
-				<div class="inner">
-					<nav>
-						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
-						</ul>
-					</nav>
-				</div>
-			</section>-->
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -108,7 +76,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1 style="color:#3D998A; font-family: 'Joan', serif">Consciouswithlife</h1>
-							<p style="font-family: 'Libre Bodoni', serif">Everything we learn creates our conscious.<br> May we have the force to heal minds in this world ❤️</p>
+							<p style="font-family: 'Libre Bodoni', serif ; color:#3D998A">Everything we learn creates our conscious.<br> May we have the force to heal minds in this world ❤️</p>
 							<ul class="actions">
 								<!--<li><a href="#one" class="button scrolly">Learn more</a></li>-->
 							</ul>
@@ -283,15 +251,16 @@
 
 
 
-		<!-- Scripts -->
-			<script src="assets-2/js/jquery.min.js"></script>
-			<script src="assets-2/js/jquery.scrollex.min.js"></script>
-			<script src="assets-2/js/jquery.scrolly.min.js"></script>
-			<script src="assets-2/js/browser.min.js"></script>
-			<script src="assets-2/js/breakpoints.min.js"></script>
-			<script src="assets-2/js/util.js"></script>
-			<script src="assets-2/js/main.js"></script>
-			  <!-- Vendor JS Files -->
+	<!-- Scripts -->
+	<script src="assets-2/js/jquery.min.js"></script>
+	<script src="assets-2/js/jquery.scrollex.min.js"></script>
+	<script src="assets-2/js/jquery.scrolly.min.js"></script>
+	<script src="assets-2/js/browser.min.js"></script>
+	<script src="assets-2/js/breakpoints.min.js"></script>
+	<script src="assets-2/js/util.js"></script>
+	<script src="assets-2/js/main.js"></script>
+	
+	<!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
