--- a/about-us-v2.html
+++ b/about-us-v2.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Mentor Bootstrap Template - Index</title>
+  <title>About Us</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/cwl.jpg" rel="icon">
+  <link href="assets/img/cwl.jpg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -93,7 +93,7 @@
 									<p>Founder & CEO of ConsciousWithLife</p>
 									<p>Kuang had a vision for a different way to learn programming where he noticed that many programmers and Computer Science students were suffering and experiencing great pain in their work. He developed and is pioneering CAH (Compassion And Healing) programming to help improve happiness for students and programmers alike, which in turn will lead to better code and learning skills. Kuang is a keen surfer and skydiver!</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<!--<li><a href="generic.html" class="button">Learn more</a></li>-->
 									</ul>
 								</div>
 							</div>
@@ -106,7 +106,7 @@
 									<p>Teacher</p>
 									<p>Richie is passionate about programming and helping students to learn programming in the CAH way. Richie believes that the best way for a student or programmer to excel is to love what they are doing and have fun! Richie also enjoys listening to Jazz, Western Classical, Chinese and Indian music as well as playing Double Bass and Clarinet</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<!--<li><a href="generic.html" class="button">Learn more</a></li>-->
 									</ul>
 								</div>
 							</div>
@@ -119,7 +119,7 @@
 									<p>Consultant</p>
 									<p>Hanh is a distinguished academic based in Australia and is business consultant to ConsciousWithLife. Hanh enjoys Vietnamese and Nepalese cuisine!</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<!--<li><a href="generic.html" class="button">Learn more</a></li>-->
 									</ul>
 								</div>
 							</div>
@@ -183,7 +183,7 @@
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
+								<!--<li><a href="generic.html" class="button">Learn more</a></li>-->
 							</ul>
 						</div>
 					</section>
