--- a/courses.html
+++ b/courses.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Courses - Mentor Bootstrap Template</title>
+  <title>Courses </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/cwl.jpg" rel="icon">
+  <link href="assets/img/cwl.jpg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -99,8 +99,8 @@
                 Today programmers are facing unparalleled levels of stress, mental burnout and nervous breakdown. ConsciousWithLife is pioneering an innovative apporach of programming called CAH programming (Compassion and Healing Programming) which can reduce and alleviate stress for programmers and students whilst learning to create quality software and code.
               </p>
               <div class="text-center">
-                <a href="about.html" class="more-btn">Get Started <i class="bx bx-chevron-right"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a href="about.html" class="more-btn">Welcome <i class="bx bx-chevron-right"></i></a>
+                <!--<a href="about.html" class="more-btn">Get Started <i class="bx bx-chevron-right"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a href="about.html" class="more-btn">Welcome <i class="bx bx-chevron-right"></i></a>-->
               </div>
             </div>
           </div>
@@ -427,7 +427,7 @@
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Mentor</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>CWL</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
@@ -438,11 +438,7 @@
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=100075402626685&sk=about" class="facebook"><i class="bx bxl-facebook"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
